# image-duplicate-finder

imgcomp/: CMakeLists.txt
imgcomp/src/: imgcmp.cpp  imgcmp.h  main.cpp
